# rs-reader

./: Cargo.toml  README.md
src/: app.rs  fzf_mode.rs  main.rs
src/db/: mod.rs  repository.rs  types.rs
src/source/: mod.rs  novel_fr.rs  syosetu.rs  types.rs
