[package]
name = "rs-reader"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
crossterm = "0.29"
directories = "6"
html2text = "0.15"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "json", "rustls-tls"] }
rusqlite = { version = "0.37", features = ["bundled"] }
scraper = "0.24"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
url = "2"
